# needaimbot

./: .env  .gitattributes  .gitignore  ANTIVIRUS_FIXES_README.md  ARCHITECTURE_ANALYSIS.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CODEBASE_ANALYSIS_REPORT.md  CONVERSION_SUMMARY.md  CONVERSION_TODO.md  CUDA_PIPELINE_STATUS.md  FINAL_MIGRATION_STATUS.md  GPU_OPTIMIZATION_FINAL_PLAN.md  GPU_OPTIMIZATION_PLAN.md  GPU_OPTIMIZATION_PLAN_V2.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_SUMMARY.md  LEGACY_CLEANUP_SCRIPT.md  LICENSE  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  README_INTEGRATED_CONTROLLER.md  REFACTORING_PLAN.md  STATIC_ANALYSIS_WARNINGS.md  UNIFIED_PIPELINE_REFACTORING.md  apply_optimizations.bat  auto_clicker.py  build.bat  build_cmake.bat  build_log.txt  build_obfuscated.bat  build_obfuscated_headless.bat  build_output.txt  connect_ssh.bat  controller_config.json  fix_serial_issue.bat  (+18 more)
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: architecture_overview.md  code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
HID_Arduino/: HID_Arduino.ino  ImprovedMouse.h  README_SPOOF.txt  check_arduino_interfaces.bat  check_mouse.bat  clean_arduino_registry.bat  force_clean_compile.bat  force_clean_registry.bat  ghostbuster.bat  hidcustom.h  nuclear_clean.bat  restore_arduino.py  spoof.py  spoof_logitech.bat  spoof_logitech_fixed.bat
MakcuRelay/: .gitignore  build_linux.sh  build_windows.bat  run_linux.sh  test_square.py
MakcuRelay/src/: MakcuConnection.cpp
cuda/: unified_graph_pipeline.cu  unified_graph_pipeline.h
docs/: CPU_OPTIMIZATION_ANALYSIS.md  GPU_CAPTURE_OPTIMIZATION.md  GPU_DIRECT_MOVEMENT_PLAN.md  PURE_CUDA_ENGINE_DESIGN.md  detector-pipeline-integration-plan.md
game_pc/: CMakeLists.txt  config.ini
game_pc/src/: main.cpp
inference_pc/: CMakeLists.txt  config.ini  display_window.h  preprocessing_simple.cu  simple_main.cpp  test_makcu_mouse.cpp  test_simple_inference.cpp  test_udp_inference.cpp
inference_pc/engine_export/: CMakeLists.txt  README.md
inference_pc/engine_export/src/: config.h  engine_exporter.cpp  engine_exporter.h  engine_tester.cpp  gui_app.cpp  logger.cpp  logger.h  main.cpp
inference_pc/needaimbot/: AppContext.h  config.ini  needaimbot.cpp  needaimbot.h
inference_pc/needaimbot/capture/: capture_interface.h  dda_capture.cpp  dda_capture.h  dda_capture_adapter.h  udp_capture.cpp  udp_capture.h  udp_capture_adapter.h
inference_pc/needaimbot/config/: config.cpp  config.h
inference_pc/needaimbot/core/: constants.h  logger.h  thread_manager.h  windows_headers.h
inference_pc/needaimbot/cuda/: cuda_error_check.h  cuda_resource_manager.cpp  cuda_resource_manager.h  preprocessing.cu  preprocessing.h  simple_inference.cu  simple_inference.h  simple_postprocess.cu  simple_postprocess.h  tensorrt_compat.h  unified_graph_pipeline.cu  unified_graph_pipeline.h  unified_graph_pipeline_cleanup.cpp
inference_pc/needaimbot/cuda/detection/: cuda_float_processing.cu  cuda_float_processing.h  postProcess.h  postProcessGpu.cu
inference_pc/needaimbot/include/: other_tools.h
inference_pc/needaimbot/keyboard/: keyboard_listener.cpp  keyboard_listener.h  keycodes.cpp  keycodes.h
inference_pc/needaimbot/modules/TensorRT-10.14.1.48/doc/: Acknowledgements.txt  README.txt
inference_pc/needaimbot/modules/TensorRT-10.14.1.48/include/: NvInfer.h  NvInferImpl.h  NvOnnxParser.h
inference_pc/needaimbot/modules/TensorRT-10.14.1.48/python/: tensorrt-10.14.1.48-cp311-none-win_amd64.whl  tensorrt-10.14.1.48-cp39-none-win_amd64.whl  tensorrt_dispatch-10.14.1.48-cp38-none-win_amd64.whl  tensorrt_lean-10.14.1.48-cp311-none-win_amd64.whl  tensorrt_lean-10.14.1.48-cp312-none-win_amd64.whl  tensorrt_lean-10.14.1.48-cp39-none-win_amd64.whl
inference_pc/needaimbot/modules/stb/: stb_image.h
inference_pc/needaimbot/mouse/: lockfree_mouse_queue.h  mouse.cpp  mouse.h
inference_pc/needaimbot/mouse/input_drivers/: InputMethod.h  MakcuConnection.cpp  MakcuConnection.h  SerialConnectionBase.h  kmboxNet.cpp  kmboxNet.h  my_enc.cpp  my_enc.h
inference_pc/needaimbot/overlay/: draw_ai.cpp  draw_color_filter.cpp  draw_mouse.cpp  draw_offset.cpp  draw_offset.h  draw_overlay.cpp  draw_profile.cpp  draw_target.cpp  overlay.h  ui_helpers.cpp
inference_pc/needaimbot/scr/: other_tools.cpp
inference_pc/needaimbot/utils/: cuda_utils.h  image_io.cpp  image_io.h  input_state.cpp  input_state.h
needaimbot/: AppContext.h  PERFORMANCE_OPTIMIZATIONS.md  README_ANTIVIRUS.txt  app.config  config.ini  constants.h  digital_signature.md  global_vars.cpp  global_vars.h  mouse_logic.cpp  mouse_logic.h  needaimbot.cpp  needaimbot.filters  needaimbot.h  needaimbot.manifest  needaimbot.rc  needaimbot.vcxproj  needaimbot_event.cpp  packages.config  resource.h  security.txt  version_info.rc
needaimbot/.claude/: settings.local.json
needaimbot/capture/: CaptureContext.h  OPTIMIZATION_GUIDE.md  bgra_to_bgr_optimization.h  capture.cpp  capture.h  capture_interface.h  color_conversion_optimized.h  dda_capture.cpp  dda_capture.h  dda_capture_adapter.h  duplication_api_capture.cpp  duplication_api_capture.h  frame_buffer_pool.cpp  frame_buffer_pool.h  game_capture.cpp  game_capture.h  global_gpu_buffer.cpp  global_gpu_buffer.h  gpu_capture.cpp  gpu_capture.h  gpu_capture_manager.cpp  gpu_capture_manager.h  gpu_only_capture.cpp  graphics_capture.cpp  graphics_capture.h  hook_info.h  ndi_capture.cpp  ndi_capture.h  nvfbc_capture.cpp  nvfbc_capture.h  nvidia_capture_sdk.cpp  obs_game_capture.cpp  obs_game_capture.h  obs_hook_capture_adapter.h  optical_flow.cpp  optical_flow.h  pinned_frame_buffer.h  region_capture.cpp  region_capture.h  (+8 more)
scripts/: obfuscate_strings.py  obfuscate_symbols.py
src/: MakcuConnection.h  bezier_trajectory.py  config.cpp  gui_app.h  hybrid_aim_controller.py  main.cpp  main_cli.cpp
sunone_aimbot_cpp/: config.ini  sunone_aimbot_cpp.cpp  sunone_aimbot_cpp.h  sunone_aimbot_cpp.vcxproj  sunone_aimbot_cpp.vcxproj.filters
(+461 files in other folders)
